--- a/src/components/bag.css
+++ b/src/components/bag.css
@@ -111,4 +111,13 @@ width: 500px;
     flex-direction: row;
     justify-content: space-between;
   }
+ .count{
+   color: rgb(219, 42, 42);
+   font-size: 14px;
+   position: absolute;
+  
+   left: 1223px;
+   border-radius: 30%;
  
+   top:16px
+   }
