--- a/src/components/chinease.css
+++ b/src/components/chinease.css
@@ -3,7 +3,7 @@
 {
     margin: 50px;
     width: 260px;
-    height: 390px;
+    height: 410px;
     border: 2px solid rgb(203, 203, 203);
     border-radius: 10px;
 }
@@ -19,12 +19,7 @@
     width: 250px;
     border-radius: 10px;
 }
-.title
-{
-    display: flex;
-    flex-direction: row;
-   justify-content:space-between;
-}
+
 .title span
 {
     font-size: 25px;
@@ -51,4 +46,28 @@
     margin-top: 10px;
     margin-left: 190px;
     background-color: rgb(214, 214, 214);
+}
+
+.quantity_icons
+{
+    width: 70px;
+    margin-left: 190px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.plus_icons
+{
+   font-size: 25px; 
+
+}
+.minus_icons
+{
+   font-size: 25px; 
+
+}
+.order_count
+{
+    margin-top:3px;
+    font-weight: bold;
 }
