--- a/src/components/bag.css
+++ b/src/components/bag.css
@@ -190,3 +190,19 @@
     margin-top: -4px;
   }
   
+  .order-type {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    font-size: 13px;
+    font-weight: 900;
+    margin-top: 10px;
+  }
+  
+  .order-type select {
+    border-radius: 5px;
+    padding: 3px 6px;
+    font-size: 13px;
+  }
+  
